Fix long placeholders on mobile for community post add

--- a/src/app/components/post/add-button/add-button.styl
+++ b/src/app/components/post/add-button/add-button.styl
@@ -27,6 +27,9 @@ $-height = 40px
 	user-select: none
 	-moz-user-select: none
 	transition: border-color 200ms $strong-ease-out
+	overflow: hidden
+	text-overflow: ellipsis
+	white-space: nowrap
 
 	&::before
 		transition: border-color 200ms $strong-ease-out
